Revert "merged conflicts for v2.0 branch"
This reverts commit 5ac6389bf13a20f719988a66ba148bdef5089988, reversing
changes made to e5f12ff132ea0fc14a2503a4bc0994790fe84526.

--- a/index.html
+++ b/index.html
@@ -1,106 +1,123 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
-	<meta charset='utf-8'>
-	<meta http-equiv="X-UA-Compatible" content="chrome=1">
-	<meta name="description" content="afable : web portal">
-
-	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-	<link rel="icon" type="image/x-icon" href="https://assets-cdn.github.com/favicon.ico">
-
-	<title>afable</title>
-
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-
+	<meta charset="UTF-8" />
+	<title>a e</title>
+	<base href="" target="_blank" />
+	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="css/styles.css" />
+	<!--<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>-->
+	<script src="js/jquery-2.1.4.min.js"></script>
+	<script src="js/main.js"></script>
 </head>
 
 <body>
-
-	<!-- HEADER -->
-	<div id="header_wrap" class="outer">
-		<header class="inner">
-			<a id="forkme_banner" href="https://github.com/afable/afable.github.io">View on GitHub</a>
-
-			<h1 id="project_title">afable</h1>
-			<h2 id="project_tagline">web portal</h2>
-
-			<section id="downloads">
-				<a class="zip_download_link" href="https://github.com/afable/afable.github.io/zipball/master">Download this project as a .zip file</a>
-				<a class="tar_download_link" href="https://github.com/afable/afable.github.io/tarball/master">Download this project as a tar.gz file</a>
-			</section>
+	<div class="wrapper">
+		<nav class="top navToTop">
+			<h3>nav (top)</h3>
+			<ul>
+				<li class="home reveal1 active">li <a href="#" target="_self">home</a></li>
+				<li class="projects reveal2"><a href="#" target="_self">projects</a></li>
+				<li class="secret reveal3"><a href="#" target="_self">secret</a></li>
+			</ul>
+		</nav>
+		
+		<header class="reveal2">
+			<h1>header</h1>
 		</header>
-	</div>
 
-	<!--NAVIGATION-->
-	<section class="inner">
-		<ul class="nav nav-pills">
-			<li role="presentation" class="active"><a href="http://afable.github.io/index.html">Home</a></li>
-			<li role="presentation"><a href="http://afable.github.io/projects.html">Projects</a></li>
-		</ul>
-	</section>
+		<!--home-->
+		<main class="home reveal3 active">
+			<nav class="map">
+				nav map
+				<aside class="map">
+					<p>map item information.
+					</p>
+				</aside>
+			</nav>
+			<section class="date1 active">
+				<h2>home section 1</h2>
+				<article>
+					<h2>article 1</h2>
 
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet ut massa ac pellentesque. Nulla facilisi. Proin
+						a lacinia quam, vel ultrices eros. Suspendisse dictum lacinia eros quis placerat.
+					</p>
+				</article>
+			</section>
+			<aside class="date1 active">
+				<h3>home aside 1 (right)</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet ut massa ac pellentesque. Nulla facilisi. Proin
+					a lacinia quam, vel ultrices eros. Suspendisse dictum lacinia eros quis placerat.
+				</p>
+			</aside>
+			<section class="date2">
+				<h2>home section 2</h2>
+				<article>
+					<h2>article 2</h2>
 
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet ut massa ac pellentesque. Nulla facilisi. Proin
+						a lacinia quam, vel ultrices eros. Suspendisse dictum lacinia eros quis placerat.
+					</p>
+				</article>
+			</section>
+			<aside class="date2">
+				<h3>home aside 2 (right)</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet ut massa ac pellentesque. Nulla facilisi. Proin
+					a lacinia quam, vel ultrices eros. Suspendisse dictum lacinia eros quis placerat.
+				</p>
+			</aside>
+			<section class="date3">
+				<h2>home section 3</h2>
+				<article>
+					<h2>article 3</h2>
 
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet ut massa ac pellentesque. Nulla facilisi. Proin
+						a lacinia quam, vel ultrices eros. Suspendisse dictum lacinia eros quis placerat.
+					</p>
+				</article>
+			</section>
+			<aside class="date3">
+				<h3>home aside 3 (right)</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet ut massa ac pellentesque. Nulla facilisi. Proin
+					a lacinia quam, vel ultrices eros. Suspendisse dictum lacinia eros quis placerat.
+				</p>
+			</aside>
+		</main>
 
-	<!-- MAIN CONTENT -->
-	<div id="main_content_wrap" class="outer">
-		<section id="main_content" class="inner">
-			<h3><a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span class="octicon octicon-link"></span></a>Me</h3>
+		<!--projects-->
+		<main class="projects reveal3">
+			<section>
+				<h2>projects section 1</h2>
+				<article>
+					<h2>article 1</h2>
 
-			<p>I graduated from UVic in 2015 with a focus on Software Engineering and now I make games. :)</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet ut massa ac pellentesque. Nulla facilisi. Proin
+						a lacinia quam, vel ultrices eros. Suspendisse dictum lacinia eros quis placerat.
+					</p>
+				</article>
+			</section>
+		</main>
 
-			<p>Software development interested me primarily because of game development. I've enjoyed playing games throughout my life
-				and now I get to share that passion with the world. Creating clean and efficient code excites me so I'm always open to
-				criticism. I want to educate people with a game interface that motivates learning and develops practical skills.</p>
+		<!--secret-->
+		<main class="secret reveal3">
+			<section>
+				<h2>secret section 1</h2>
+				<article>
+					<h2>article 1</h2>
 
-			<pre><code>
-	while ( alive() )	
-	{
-		make_games(♥);
-	};
-			</code></pre>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet ut massa ac pellentesque. Nulla facilisi. Proin
+						a lacinia quam, vel ultrices eros. Suspendisse dictum lacinia eros quis placerat.
+					</p>
+				</article>
+			</section>
+		</main>
 
-			<h3><a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
-
-			<p>Having trouble? Send me an <a href="mailto:afablee@gmail.com">email</a>. You can find me online at the following websites:
-				<a href="https://github.com/afable" target="_blank">Github</a>,
-				<a href="http://stackoverflow.com/users/911211/afable" target="_blank">Stack Overflow</a>,
-				<a href="https://www.linkedin.com/pub/erik-afable/31/a32/176" target="_blank">LinkedIn</a>, and
-				<a href="https://www.youtube.com/user/superafable/feed" target="_blank">Youtube</a>.
-			</p>
-
-		</section>
-	</div>
-
-	<!-- FOOTER  -->
-	<div id="footer_wrap" class="outer">
-		<footer class="inner">
-			<p class="copyright">afable maintained by <a href="https://github.com/afable">afable</a></p>
-			<p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+		<footer class="reveal3">
+			<h3>footer</h3>
 		</footer>
 	</div>
-
-	<script type="text/javascript">
-		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-	</script>
-	<script type="text/javascript">
-		try {
-              var pageTracker = _gat._getTracker("UA-61562068-1");
-            pageTracker._trackPageview();
-            } catch(err) {}
-	</script>
-
-
 </body>
 
 </html>
