initial commit for v3.0 branch

--- a/index.html
+++ b/index.html
@@ -1,106 +1,76 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" manifest="global.appcache">
+	<head>
+		<title>afable</title>
 
-<head>
-	<meta charset='utf-8'>
-	<meta http-equiv="X-UA-Compatible" content="chrome=1">
-	<meta name="description" content="afable : web portal">
+		<!-- META -->
+		<meta charset='utf-8'>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-	<link rel="icon" type="image/x-icon" href="https://assets-cdn.github.com/favicon.ico">
+		 <!-- CSS -->
+		<link rel="stylesheet" type="text/css" href="">	
+		
+	</head>
+	<body>
+		<!-- Navigation -->
+		<div id="nav-wrapper" class="outer">
+			<div id="nav" class="inner">
+				<ul class="nav-list">
+					<li class="nav-item">1</li>
+					<li class="nav-item">1</li>
+				</ul>
+			</div>
+		</div>
+		<!-- Navigation end  
+		================================================== -->
 
-	<title>afable</title>
-
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-
-</head>
-
-<body>
-
-	<!-- HEADER -->
-	<div id="header_wrap" class="outer">
-		<header class="inner">
-			<a id="forkme_banner" href="https://github.com/afable/afable.github.io">View on GitHub</a>
-
-			<h1 id="project_title">afable</h1>
-			<h2 id="project_tagline">web portal</h2>
-
-			<section id="downloads">
-				<a class="zip_download_link" href="https://github.com/afable/afable.github.io/zipball/master">Download this project as a .zip file</a>
-				<a class="tar_download_link" href="https://github.com/afable/afable.github.io/tarball/master">Download this project as a tar.gz file</a>
+		<!-- Main Content -->
+		<div id="main-wrapper" class="outer">
+			<section id="main-content-1" class="inner">
+				<h3>Some Title</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<pre><code>
+		while ( alive() )	
+		{
+			make_games(♥);
+		};
+				</code></pre>
 			</section>
-		</header>
-	</div>
+			<section id="main-content-2" class="inner">
+				<h3>Some Title</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<pre><code>
+		while ( alive() )	
+		{
+			make_games(♥);
+		};
+				</code></pre>
+			</section>
+			<section id="main-content-3" class="inner">
+				<h3>Some Title</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<pre><code>
+		while ( alive() )	
+		{
+			make_games(♥);
+		};
+				</code></pre>
+			</section>
+		</div>
+		<!-- Main Content end
+		================================================== -->
 
-	<!--NAVIGATION-->
-	<section class="inner">
-		<ul class="nav nav-pills">
-			<li role="presentation" class="active"><a href="http://afable.github.io/index.html">Home</a></li>
-			<li role="presentation"><a href="http://afable.github.io/projects.html">Projects</a></li>
-		</ul>
-	</section>
+		<!-- Footer -->
+		<div id="footer-wrapper" class="outer">
+			<footer class="inner">
+				<p>Written and coded by <a href="https://www.freecodecamp.com/afable" target="_blank">afable</a> <a href="https://github.com/afable" target="_blank"><i class="fa fa-github fa-lg"></i></a> <a href="https://twitter.com/superafable" target="_blank"><i class="fa fa-twitter fa-lg"></i></a> <a href="https://www.linkedin.com/in/erik-afable-176a3231" target="_blank"><i class="fa fa-linkedin fa-lg"></i></a></p>
+			</footer>
+		</div>
+		<!-- Footer end
+		================================================== -->
 
+		<!-- JS (bottom since scripts block parallel downloads) -->
+		<script></script>
 
-
-
-	<!-- MAIN CONTENT -->
-	<div id="main_content_wrap" class="outer">
-		<section id="main_content" class="inner">
-			<h3><a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span class="octicon octicon-link"></span></a>Me</h3>
-
-			<p>I graduated from UVic in 2015 with a focus on Software Engineering and now I make games. :)</p>
-
-			<p>Software development interested me primarily because of game development. I've enjoyed playing games throughout my life
-				and now I get to share that passion with the world. Creating clean and efficient code excites me so I'm always open to
-				criticism. I want to educate people with a game interface that motivates learning and develops practical skills.</p>
-
-			<pre><code>
-	while ( alive() )	
-	{
-		make_games(♥);
-	};
-			</code></pre>
-
-			<h3><a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
-
-			<p>Having trouble? Send me an <a href="mailto:afablee@gmail.com">email</a>. You can find me online at the following websites:
-				<a href="https://github.com/afable" target="_blank">Github</a>,
-				<a href="http://stackoverflow.com/users/911211/afable" target="_blank">Stack Overflow</a>,
-				<a href="https://www.linkedin.com/pub/erik-afable/31/a32/176" target="_blank">LinkedIn</a>, and
-				<a href="https://www.youtube.com/user/superafable/feed" target="_blank">Youtube</a>.
-			</p>
-
-		</section>
-	</div>
-
-	<!-- FOOTER  -->
-	<div id="footer_wrap" class="outer">
-		<footer class="inner">
-			<p class="copyright">afable maintained by <a href="https://github.com/afable">afable</a></p>
-			<p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-		</footer>
-	</div>
-
-	<script type="text/javascript">
-		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-	</script>
-	<script type="text/javascript">
-		try {
-              var pageTracker = _gat._getTracker("UA-61562068-1");
-            pageTracker._trackPageview();
-            } catch(err) {}
-	</script>
-
-
-</body>
-
+	</body>
 </html>
