appcache is confusing and chrome kept performing a 'GET /' x3 but only x1 for firefox

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		 <!-- CSS -->
-		<link rel="stylesheet" type="text/css" href="">	
+		<!--<link rel="stylesheet" type="text/css" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.css">	-->
 		
 	</head>
 	<body>
@@ -63,14 +63,20 @@
 		<!-- Footer -->
 		<div id="footer-wrapper" class="outer">
 			<footer class="inner">
-				<p>Written and coded by <a href="https://www.freecodecamp.com/afable" target="_blank">afable</a> <a href="https://github.com/afable" target="_blank"><i class="fa fa-github fa-lg"></i></a> <a href="https://twitter.com/superafable" target="_blank"><i class="fa fa-twitter fa-lg"></i></a> <a href="https://www.linkedin.com/in/erik-afable-176a3231" target="_blank"><i class="fa fa-linkedin fa-lg"></i></a></p>
+				<p>Written and coded by 
+				<a href="https://www.freecodecamp.com/afable" target="_blank">afable</a> 
+				<a href="https://github.com/afable" target="_blank"><i class="fa fa-github fa-lg"></i></a> 
+				<a href="https://twitter.com/superafable" target="_blank"><i class="fa fa-twitter fa-lg"></i></a> 
+				<a href="https://www.linkedin.com/in/erik-afable-176a3231" target="_blank"><i class="fa fa-linkedin fa-lg"></i></a>
+				</p>
 			</footer>
 		</div>
 		<!-- Footer end
 		================================================== -->
 
 		<!-- JS (bottom since scripts block parallel downloads) -->
-		<script></script>
+		<!--<script src="https://code.jquery.com/jquery-1.11.3.js"></script>-->
+		<!--<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.js"></script>-->
 
 	</body>
 </html>
