--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		 <!-- CSS -->
-		<!--<link rel="stylesheet" type="text/css" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.css">	-->
+		<link rel="stylesheet" type="text/css" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.css">	
 		
 	</head>
 	<body>
@@ -75,8 +75,8 @@
 		================================================== -->
 
 		<!-- JS (bottom since scripts block parallel downloads) -->
-		<!--<script src="https://code.jquery.com/jquery-1.11.3.js"></script>-->
-		<!--<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.js"></script>-->
+		<script src="https://code.jquery.com/jquery-2.2.4.js"></script>
+		<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.js"></script>
 
 	</body>
 </html>
