manually inserted anchor and header ui classes since jquerymobile on refresh of a #page-X (jquerymobile wasn't automatically adding these classes unless refresh was on index.html)

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 </head>
 <body>
 	<div data-role="page" id="page-1">
-		<div data-role="header" class="header" data-position="fixed" data-fullscreen="true"> 
+		<div data-role="header" class="header ui-header ui-header-fullscreen ui-bar-inherit ui-header-fixed slidedown" data-position="fixed" data-fullscreen="true"> 
 			<nav id="nav">
-				<a href="#page-1" data-role="button" data-transition="fade">helloBOY1</a>
-				<a href="#page-2" data-role="button" data-transition="flip">helloGIRL2</a>
-				<a href="#page-3" data-role="button" data-transition="pop">a</a>
-				<a href="#page-5" data-role="button" data-transition="flow">c</a>
-				<a href="#page-6" data-role="button" data-transition="slidefade">d</a>
-				<a href="#page-8" data-role="button" data-transition="slideup">f</a>
-				<a href="#page-9" data-role="button" data-transition="slidedown">g</a>
+				<a href="#page-1" data-role="button" data-transition="fade" class="ui-link ui-btn ui-shadow ui-corner-all" role="button">helloBOY1</a>
+				<a href="#page-2" data-role="button" data-transition="flip" class="ui-link ui-btn ui-shadow ui-corner-all" role="button">helloGIRL2</a>
+				<a href="#page-3" data-role="button" data-transition="pop" class="ui-link ui-btn ui-shadow ui-corner-all" role="button">a</a>
+				<a href="#page-5" data-role="button" data-transition="flow" class="ui-link ui-btn ui-shadow ui-corner-all" role="button">c</a>
+				<a href="#page-6" data-role="button" data-transition="slidefade" class="ui-link ui-btn ui-shadow ui-corner-all" role="button">d</a>
+				<a href="#page-8" data-role="button" data-transition="slideup" class="ui-link ui-btn ui-shadow ui-corner-all" role="button">f</a>
+				<a href="#page-9" data-role="button" data-transition="slidedown" class="ui-link ui-btn ui-shadow ui-corner-all" role="button">g</a>
 			</nav>
 		</div><!-- /header -->
 		<div role="main" class="ui-content" id="main">
