--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 	
 </head>
 <body>
-	<div data-role="page" id="page-1">
+	<div data-role="page" id="page-1" class="ui-page">
 		<div data-role="header" class="header ui-header ui-header-fullscreen ui-bar-inherit ui-header-fixed slidedown" data-position="fixed" data-fullscreen="true"> 
 			<nav id="nav">
-				<a href="#page-1" data-role="button" data-transition="fade" class="ui-link ui-btn ui-shadow ui-corner-all" role="button">helloBOY1</a>
-				<a href="#page-2" data-role="button" data-transition="flip" class="ui-link ui-btn ui-shadow ui-corner-all" role="button">helloGIRL2</a>
-				<a href="#page-3" data-role="button" data-transition="pop" class="ui-link ui-btn ui-shadow ui-corner-all" role="button">a</a>
-				<a href="#page-5" data-role="button" data-transition="flow" class="ui-link ui-btn ui-shadow ui-corner-all" role="button">c</a>
-				<a href="#page-6" data-role="button" data-transition="slidefade" class="ui-link ui-btn ui-shadow ui-corner-all" role="button">d</a>
-				<a href="#page-8" data-role="button" data-transition="slideup" class="ui-link ui-btn ui-shadow ui-corner-all" role="button">f</a>
-				<a href="#page-9" data-role="button" data-transition="slidedown" class="ui-link ui-btn ui-shadow ui-corner-all" role="button">g</a>
+				<a href="#page-1" data-role="button" data-transition="fade" class="ui-link ui-btn ui-shadow ui-corner-all" role="button">1</a>
+				<a href="#page-2" data-role="button" data-transition="flip" class="ui-link ui-btn ui-shadow ui-corner-all" role="button">2</a>
+				<a href="#page-3" data-role="button" data-transition="pop" class="ui-link ui-btn ui-shadow ui-corner-all" role="button">3</a>
+				<a href="#page-5" data-role="button" data-transition="flow" class="ui-link ui-btn ui-shadow ui-corner-all" role="button">5</a>
+				<a href="#page-6" data-role="button" data-transition="slidefade" class="ui-link ui-btn ui-shadow ui-corner-all" role="button">6</a>
+				<a href="#page-8" data-role="button" data-transition="slideup" class="ui-link ui-btn ui-shadow ui-corner-all" role="button">8</a>
+				<a href="#page-9" data-role="button" data-transition="slidedown" class="ui-link ui-btn ui-shadow ui-corner-all" role="button">9</a>
 			</nav>
 		</div><!-- /header -->
 		<div role="main" class="ui-content" id="main">
@@ -30,7 +30,7 @@
 				<h3>Some Title</h3>
 			</section>
 		</div><!-- /main -->
-		<div data-role="footer" id="footer" data-position="fixed" data-fullscreen="true"> <footer> 
+		<div data-role="footer" class="footer ui-footer ui-footer-fullscreen ui-bar-inherit ui-footer-fixed slideup" data-position="fixed" data-fullscreen="true"> <footer> 
 				<p>Written and coded by 
 				</p>
 			</footer>
@@ -38,7 +38,7 @@
 	</div><!-- /page-1 -->
 			
 			
-	<div data-role="page" id="page-2">
+	<div data-role="page" id="page-2" class="ui-page">
 		<div role="main" class="ui-content" id="main">
 			<section id="content-1" class="content">
 				<pre><code>
@@ -51,7 +51,7 @@
 		</div><!-- /main -->
 	</div><!-- /page-2 -->
 
-	<div data-role="page" id="page-3">
+	<div data-role="page" id="page-3" class="ui-page">
 		<div role="main" class="ui-content" id="main">
 			<section id="content-1" class="content">
 				<pre><code>
@@ -63,7 +63,7 @@
 			</section>
 		</div><!-- /main -->
 	</div><!-- /page-2 -->
-	<div data-role="page" id="page-4">
+	<div data-role="page" id="page-5" class="ui-page">
 		<div role="main" class="ui-content" id="main">
 			<section id="content-1" class="content">
 				<pre><code>
@@ -75,7 +75,7 @@
 			</section>
 		</div><!-- /main -->
 	</div><!-- /page-2 -->
-	<div data-role="page" id="page-5">
+	<div data-role="page" id="page-6" class="ui-page">
 		<div role="main" class="ui-content" id="main">
 			<section id="content-1" class="content">
 				<pre><code>
@@ -87,7 +87,8 @@
 			</section>
 		</div><!-- /main -->
 	</div><!-- /page-2 -->
-	<div data-role="page" id="page-6">
+	
+	<div data-role="page" id="page-8" class="ui-page">
 		<div role="main" class="ui-content" id="main">
 			<section id="content-1" class="content">
 				<pre><code>
@@ -99,78 +100,11 @@
 			</section>
 		</div><!-- /main -->
 	</div><!-- /page-2 -->
-	<div data-role="page" id="page-7">
+	
+	<div data-role="page" id="page-9" class="ui-page">
 		<div role="main" class="ui-content" id="main">
 			<section id="content-1" class="content">
 				<pre><code>
-		while ( alive() )	
-		{
-			make_games(♥);
-		};
-				</code></pre>
-			</section>
-		</div><!-- /main -->
-	</div><!-- /page-2 -->
-	<div data-role="page" id="page-8">
-		<div role="main" class="ui-content" id="main">
-			<section id="content-1" class="content">
-				<pre><code>
-		while ( alive() )	
-		{
-			make_games(♥);
-		};
-				</code></pre>
-			</section>
-		</div><!-- /main -->
-	</div><!-- /page-2 -->
-	<div data-role="page" id="page-9">
-		<div role="main" class="ui-content" id="main">
-			<section id="content-1" class="content">
-				<pre><code>
-		while ( alive() )	
-		{
-			make_games(♥);
-		};
-				</code></pre>
-			</section>
-		</div><!-- /main -->
-	</div><!-- /page-2 -->
-	<div data-role="page" id="page-10">
-		<div role="main" class="ui-content" id="main">
-			<section id="content-1" class="content">
-				<pre><code>
-		while ( alive() )	
-		{
-			make_games(♥);
-		};
-		while ( alive() )	
-		{
-			make_games(♥);
-		};
-		while ( alive() )	
-		{
-			make_games(♥);
-		};
-		while ( alive() )	
-		{
-			make_games(♥);
-		};
-		while ( alive() )	
-		{
-			make_games(♥);
-		};
-		while ( alive() )	
-		{
-			make_games(♥);
-		};
-		while ( alive() )	
-		{
-			make_games(♥);
-		};
-		while ( alive() )	
-		{
-			make_games(♥);
-		};
 		while ( alive() )	
 		{
 			make_games(♥);
