index.html: #page-1 changed to #afable  as naming conventions will be used going forward with projects... .nav-button class added to buttons... data-tap-toggle='true' although it doesn't work on refresh of pages other than the main page...
main.js: 'on' event handler used to bind on pagecreate to clone
header and footer from #afable... manually added .ui-btn-active anchor
class on pagecontainerchange... captured left & right swipes for
future use...

--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
 	
 </head>
 <body>
-	<div data-role="page" id="page-1" class="ui-page">
-		<div data-role="header" class="header ui-header ui-header-fullscreen ui-bar-inherit ui-header-fixed slidedown" data-position="fixed" data-fullscreen="true"> 
+	<div data-role="page" id="afable" class="ui-page">
+		<div data-role="header" class="header ui-header ui-header-fullscreen ui-header-fixed slidedown ui-bar-inherit" data-position="fixed" data-fullscreen="true" data-tap-toggle="true" role="banner"> 
 			<nav id="nav">
-				<a href="#page-1" data-role="button" data-transition="fade" class="ui-link ui-btn ui-shadow ui-corner-all" role="button">1</a>
-				<a href="#page-2" data-role="button" data-transition="flip" class="ui-link ui-btn ui-shadow ui-corner-all" role="button">2</a>
-				<a href="#page-3" data-role="button" data-transition="pop" class="ui-link ui-btn ui-shadow ui-corner-all" role="button">3</a>
-				<a href="#page-5" data-role="button" data-transition="flow" class="ui-link ui-btn ui-shadow ui-corner-all" role="button">5</a>
-				<a href="#page-6" data-role="button" data-transition="slidefade" class="ui-link ui-btn ui-shadow ui-corner-all" role="button">6</a>
-				<a href="#page-8" data-role="button" data-transition="slideup" class="ui-link ui-btn ui-shadow ui-corner-all" role="button">8</a>
-				<a href="#page-9" data-role="button" data-transition="slidedown" class="ui-link ui-btn ui-shadow ui-corner-all" role="button">9</a>
+				<a href="#afable" data-role="button" data-transition="fade" class="nav-button ui-link ui-btn ui-shadow ui-corner-all" role="button">1</a>
+				<a href="#page-2" data-role="button" data-transition="flip" class="nav-button ui-link ui-btn ui-shadow ui-corner-all" role="button">2</a>
+				<a href="#page-3" data-role="button" data-transition="pop" class="nav-button ui-link ui-btn ui-shadow ui-corner-all" role="button">3</a>
+				<a href="#page-5" data-role="button" data-transition="flow" class="nav-button ui-link ui-btn ui-shadow ui-corner-all" role="button">5</a>
+				<a href="#page-6" data-role="button" data-transition="slidefade" class="nav-button ui-link ui-btn ui-shadow ui-corner-all" role="button">6</a>
+				<a href="#page-8" data-role="button" data-transition="slideup" class="nav-button ui-link ui-btn ui-shadow ui-corner-all" role="button">8</a>
+				<a href="#page-9" data-role="button" data-transition="slidedown" class="nav-button ui-link ui-btn ui-shadow ui-corner-all" role="button">9</a>
 			</nav>
 		</div><!-- /header -->
 		<div role="main" class="ui-content" id="main">
-			<section id="content-1" class="content">
+			<section style="background-color: #fef; height: 111px;" id="content-1" class="content">
 				<h3>Some Title</h3>
 			</section>
 		</div><!-- /main -->
-		<div data-role="footer" class="footer ui-footer ui-footer-fullscreen ui-bar-inherit ui-footer-fixed slideup" data-position="fixed" data-fullscreen="true"> <footer> 
+		<div data-role="footer" class="footer ui-footer ui-footer-fullscreen ui-bar-inherit ui-footer-fixed slideup" data-position="fixed" data-fullscreen="true" data-tap-toggle="true"> <footer> 
 				<p>Written and coded by 
 				</p>
 			</footer>
@@ -38,18 +38,13 @@
 	</div><!-- /page-1 -->
 			
 			
-	<div data-role="page" id="page-2" class="ui-page">
+	<div data-role="page" id="page-2" class="ui-page ui-page-theme-a ui-page-header-fullscreen ui-page-footer-fullscreen">
 		<div role="main" class="ui-content" id="main">
 			<section id="content-1" class="content">
-				<pre><code>
-		while ( alive() )	
-		{
-			make_games(♥);
-		};
-				</code></pre>
+				<h3>Some Title</h3>
 			</section>
 		</div><!-- /main -->
-	</div><!-- /page-2 -->
+	</div><!-- /page-1 -->
 
 	<div data-role="page" id="page-3" class="ui-page">
 		<div role="main" class="ui-content" id="main">
