added font awesome cdn and added fa-icons & profile anchors to footer

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 	<!-- CSS -->
 	<link rel="stylesheet" type="text/css" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.css">	
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
+
+	<!--Font Awesome-->
+	<script src="https://use.fontawesome.com/481fd232fe.js"></script>
 	
 </head>
 <body>
