--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<!-- JS (bottom since scripts block parallel downloads) -->
 	<script src="https://code.jquery.com/jquery-2.2.4.js"></script>
 	<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 	<script src="/js/main.js"></script>
 
 </body>
