--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 	<link rel="stylesheet" type="text/css" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.css">	
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
 
+	<!-- Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do|Reenie+Beanie" rel="stylesheet">
+
 	<!--Font Awesome-->
 	<script src="https://use.fontawesome.com/481fd232fe.js"></script>
 	
