added nojs handler to let users know javascript is required for this site.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
 </head>
 <body>
 
+	<noscript>
+		<div class="nojs">
+			<p class="nojs">Javascript is not enabled. :(</p>
+			<p class="nojs">Please enable Javascript to use this site.</p>
+		</div>	
+	</noscript>
+
 	<!-- JS (bottom since scripts block parallel downloads) -->
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
