modularized nojs handler all into the html body... so far it seems that noscript does not load on current browsers when javascript is enabled, thereby not needing to display: none .nojs classes... test on mobile browsers gives acceptable behaviour.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <body>
 
 	<noscript>
-		<div class="nojs">
-			<p class="nojs">Javascript is not enabled. :(</p>
-			<p class="nojs">Please enable Javascript to use this site.</p>
+		<div class="nojs" style="margin: 0; position: fixed; top: 33vh; right: 20vw; left: 20vw; text-align: center; font-family: 'Reenie Beanie', 'Nothing You Could Do', monospace; font-size: 1em; color: #000; text-shadow: 0px 0px 1px #666">
+			<p>Javascript is not enabled. :(</p>
+			<p>Please enable Javascript to use this site.</p>
 		</div>	
 	</noscript>
 
