added jsdoc @fileoverview, @author comments

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<!-- index.html: afable 2016 -->
+<!--
+	@fileOverview Main html implementation of afable.github.io, 2016
+	@author afablee@gmail.com, @superafable
+--> 
 
 <!DOCTYPE html>
 <html lang="en">
