--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-	<script src="http://ricostacruz.com/jquery.transit/jquery.transit.min.js"></script>
+	<script src="/jquery.transit.min.js"></script>
 	<script src="/js/main.js"></script>
 
 </body>
