updated previous old links (updated all possible urls to relative)

--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="chrome=1">
 	<meta name="description" content="afable : web portal">
 
-	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+	<link rel="stylesheet" type="text/css" media="screen" href="./stylesheets/stylesheet.css">
 	<link rel="icon" type="image/x-icon" href="https://assets-cdn.github.com/favicon.ico">
 
 	<title>afable</title>
@@ -38,14 +38,14 @@
 	<!-- HEADER -->
 	<div id="header_wrap" class="outer">
 		<header class="inner">
-			<a id="forkme_banner" href="https://github.com/afable/afable.github.io">View on GitHub</a>
+			<a id="forkme_banner" href="https://github.com/afable/afable.github.io/tree/v1.0-ghpages">View on GitHub</a>
 
 			<h1 id="project_title">afable</h1>
 			<h2 id="project_tagline">web portal</h2>
 
 			<section id="downloads">
-				<a class="zip_download_link" href="https://github.com/afable/afable.github.io/zipball/master">Download this project as a .zip file</a>
-				<a class="tar_download_link" href="https://github.com/afable/afable.github.io/tarball/master">Download this project as a tar.gz file</a>
+				<a class="zip_download_link" href="https://github.com/afable/afable.github.io/archive/v1.0-ghpages.zip">Download this project as a .zip file</a>
+				<a class="tar_download_link" href="https://github.com/afable/afable.github.io/archive/v1.0-ghpages.tar.gz">Download this project as a tar.gz file</a>
 			</section>
 		</header>
 	</div>
@@ -53,8 +53,8 @@
 	<!--NAVIGATION-->
 	<section class="inner">
 		<ul class="nav nav-pills">
-			<li role="presentation"><a href="http://afable.github.io/index.html">Home</a></li>
-			<li role="presentation" class="active"><a href="http://afable.github.io/projects.html">Projects</a></li>
+			<li role="presentation"><a href="./index.html">Home</a></li>
+			<li role="presentation" class="active"><a href="./projects.html">Projects</a></li>
 		</ul>
 	</section>
 
