--- a/jdbhml/index.html
+++ b/jdbhml/index.html
@@ -6,7 +6,7 @@
 <canvas height="480px" width="640px">
 Please update your browser to view game.
 </canvas>
-<img id="talkie-img" src="./img/face-x-small.png" style="opacity: 1">
+<img id="talkie-img" src="./img/idle.gif" style="opacity: 1">
 <section id="talkie-box" class="no-select" style="opacity: 1">
   <p id="talkie"> <i>.</i>
 </section>
