Added test print to console from index.html > javascript tag.

--- a/fall/index.html
+++ b/fall/index.html
@@ -256,6 +256,9 @@
 			}
 		})();
 	//]]></script>
+	<script type='text/javascript'>
+		console.log('test print to console in html')
+	</script>
 </body>
 </html>
 
