--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do|Reenie+Beanie" rel="stylesheet">
 
+	<!-- Font Awesome -->
+	<script src="https://kit.fontawesome.com/f4a839e547.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
 
@@ -34,7 +37,6 @@
 	<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 	<script src="/js/jquery.transit.min.js"></script>
-	<script src="https://use.fontawesome.com/8be9567606.js"></script>
 	<script src="/js/main.js"></script>
 	
 
