--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!--
-	@fileOverview Main html implementation of afable.github.io, 2016
-	@author afablee@gmail.com, @superafable
+	@author afablee@gmail.com, 2020
 --> 
 
 <!DOCTYPE html>
