Fixed cat title to something a bit more "cat".

--- a/cat/index.html
+++ b/cat/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <meta charset="utf-8">
-<title>MDN Canvas Tut</title>
+<title>cat</title>
 <link rel="stylesheet" href="./css/main.css">
 <link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet">
 <canvas height="480px" width="640px">
