--- a/index.html
+++ b/index.html
@@ -14,13 +14,10 @@
 	<!-- CSS -->
 	<link rel="stylesheet" type="text/css" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">	
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
-
-	<!-- Google Fonts -->
+	<!-- CSS Font Awesome -->
+	<link href="fortawesome-fontawesome-pro-5.15.4/package/css/all.css" rel="stylesheet">
+	<!-- CSS Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do|Reenie+Beanie" rel="stylesheet">
-
-	<!-- Font Awesome -->
-	<script src="https://kit.fontawesome.com/f4a839e547.js" crossorigin="anonymous"></script>
-
 </head>
 <body>
 
